--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
 script:
   - go test -v -cover ./...
   - go vet ./...
-  - go install honnef.co/go/tools/cmd/staticcheck
+  - go install honnef.co/go/tools/cmd/staticcheck@latest
   - staticcheck -go 1.16 ./...
   - go get -v -u -d github.com/fzipp/gocyclo/cmd/gocyclo
   - go run github.com/fzipp/gocyclo/cmd/gocyclo -avg .
